standalone builder for unix
git-svn-id: https://dcm4che.svn.sourceforge.net/svnroot/dcm4che/weasis/weasis_framework/trunk@14945 a605150a-d416-0410-a114-93ca8beb8bc8